--- a/personal/package.json
+++ b/personal/package.json
@@ -8,7 +8,9 @@
     "vue": "^2.3.3",
     "vue-router": "^2.5.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^2.6.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
