--- a/20170603补/vue-book/package.json
+++ b/20170603补/vue-book/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.3",
