--- a/20170613/20170613react-router/package.json
+++ b/20170613/20170613react-router/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "20170608node",
+  "name": "20170613react-router",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
