--- a/redux/redux_zhs/package.json
+++ b/redux/redux_zhs/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "20170608node",
+  "name": "redux_zhs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
